Response area fixes: error formatting and validate collections

--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,9 @@
     <!-- Google OAuth Authentication -->
     <script type="text/javascript" src="google-oauth-auth.js"></script>
 
+    <!-- Validation module -->
+    <script type="text/javascript" src="validations.js"></script>
+    
     <!-- Main application logic (bundle.js contains main.js functions) -->
     <script type="text/javascript" src="bundle.js"></script>
 
