Generify key value sections

--- a/public/index.html
+++ b/public/index.html
@@ -667,7 +667,7 @@
         <!-- Query Parameters Section -->
         <div class="collapsible-section">
             <div class="collapsible-header" onclick="toggleCollapsible('query-params')">
-                <h4>Query Parameters <span id="query-params-count" class="count-indicator">(0)</span></h4>
+                <h4>Query Parameters <span id="query-params-count" class="count-indicator">0</span></h4>
                 <span class="collapsible-toggle" id="query-params-toggle">▶</span>
             </div>
             <div class="collapsible-content" id="query-params-content">
@@ -681,7 +681,7 @@
         <!-- Headers Section -->
         <div class="collapsible-section">
             <div class="collapsible-header" onclick="toggleCollapsible('headers')">
-                <h4>Headers <span id="headers-count" class="count-indicator">(0)</span></h4>
+                <h4>Headers <span id="headers-count" class="count-indicator">0</span></h4>
                 <span class="collapsible-toggle" id="headers-toggle">▶</span>
             </div>
             <div class="collapsible-content" id="headers-content">
@@ -695,7 +695,7 @@
         <!-- Variables Section -->
         <div class="collapsible-section">
             <div class="collapsible-header" onclick="toggleCollapsible('variables')">
-                <h4>Variables <span id="variables-count" class="count-indicator">(0)</span></h4>
+                <h4>Variables <span id="variables-count" class="count-indicator">0</span></h4>
                 <span class="collapsible-toggle" id="variables-toggle">▶</span>
             </div>
             <div class="collapsible-content" id="variables-content">
