fix: Dont overwrite route bar so frequently. and reorder root dropdown order

--- a/public/index.html
+++ b/public/index.html
@@ -617,7 +617,7 @@
             <label>HTTP Methods</label>
             <div class="http-methods">
                 <button id="post" onclick='sendRequests("POST")'>POST</button>
-                <input id="path_id" placeholder="existing element id here" oninput="handlePathIdChange()"></input>
+                <input id="path_id" placeholder="existing element id here" oninput="handlePathIdChange()" style="width: 280px;"></input>
                 <button id="put" disabled onclick='sendRequests("PUT")'>PUT</button>
                 <button id="patch" disabled onclick='sendRequests("PATCH")'>PATCH</button>
                 <button id="get" onclick='sendRequests("GET")'>GET</button>
