--- a/public/index.html
+++ b/public/index.html
@@ -315,7 +315,7 @@
             padding: 6px 8px;
             border-radius: 4px;
             font-size: 11px;
-            flex: 1;
+            flex: 0 0 auto;
             min-width: 100px;
         }
         
