--- a/public/llm-preload.html
+++ b/public/llm-preload.html
@@ -168,6 +168,9 @@
         </div>
     </div>
 
+    <!-- API Configuration -->
+    <script type="text/javascript" src="api-config.js"></script>
+
     <script>
         // Populate tenant textbox from URL parameter on page load
         const urlParams = new URLSearchParams(window.location.search);
@@ -220,7 +223,7 @@
             submitBtn.textContent = 'Generating...';
             
             try {
-            const response = await fetch('https://jcbr6205t2.execute-api.us-east-1.amazonaws.com/dev/api/llm-preload', {
+            const response = await fetch(window.API_CONFIG.LLM_PRELOAD_URL, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
