--- a/public/llm-tools.html
+++ b/public/llm-tools.html
@@ -144,7 +144,13 @@
     <script>
         // Get tenant parameter from URL
         const urlParams = new URLSearchParams(window.location.search);
-        const tenant = urlParams.get('tenant') || 'meta';
+        let tenant = urlParams.get('tenant');
+        
+        // If no tenant in URL, default to stored tenant from localStorage
+        if (!tenant) {
+            tenant = localStorage.getItem('last_tenant') || 'meta';
+            console.log('No tenant in URL, using stored tenant:', tenant);
+        }
         
         // Update all links to preserve tenant parameter
         document.getElementById('preloadLink').href = `llm-preload.html?tenant=${encodeURIComponent(tenant)}`;
