--- a/public/index.html
+++ b/public/index.html
@@ -706,6 +706,24 @@
     </div>
   </div>
 
+  <!-- Footer -->
+  <div style="position: fixed; bottom: 10px; right: 10px; z-index: 1000;">
+    <a href="register.html" style="
+      display: inline-block;
+      background: linear-gradient(135deg, #4CAF50, #45a049);
+      color: white;
+      text-decoration: none;
+      padding: 8px 16px;
+      border-radius: 20px;
+      font-size: 12px;
+      font-weight: 600;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+      transition: transform 0.2s ease;
+    " onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      ✨ Like this page? Make your own with Blockforger 💪
+    </a>
+  </div>
+
   <script>
     // Preserve tenant parameter in AI tools link
     const urlParams = new URLSearchParams(window.location.search);
