--- a/public/billing.html
+++ b/public/billing.html
@@ -523,25 +523,21 @@
         <div class="plans-grid">
             <!-- Token Purchase Options -->
             <div class="plan-card featured">
-                <div class="plan-badge">Best Value</div>
+                <div class="plan-badge">Great Deal!</div>
                 <div class="plan-name">Token Packages</div>
                 <div class="plan-price">$1</div>
                 <div class="plan-period">= 30,000 tokens</div>
                 <ul class="plan-features">
                     <li><strong>30,000 tokens:</strong> $1.00</li>
-                    <li><strong>150,000 tokens:</strong> $5.00</li>
-                    <li><strong>300,000 tokens:</strong> $10.00</li>
-                    <li><strong>750,000 tokens:</strong> $25.00</li>
-                    <li><strong>Instant delivery</strong></li>
+                    <li><strong>1,000,000 tokens:</strong> $33.00</li>
+                    <li><strong>Delivery in seconds</strong></li>
                     <li><strong>No expiration</strong></li>
+                    <li><strong>Choose your quantity on the secure Stripe checkout page</strong></li>
                 </ul>
                 <div class="token-purchase-options">
                     <button class="plan-button primary" onclick="purchaseTokens()">
                         Purchase Tokens
                     </button>
-                    <p style="margin-top: 15px; color: #cccccc; font-size: 0.9rem;">
-                        Choose your quantity on the secure Stripe checkout page
-                    </p>
                 </div>
             </div>
             
@@ -552,12 +548,10 @@
                 <div class="plan-price">Portal</div>
                 <div class="plan-period">manage your account</div>
                 <ul class="plan-features">
-                    <li><strong>Payment History:</strong> View all transactions</li>
-                    <li><strong>Usage Reports:</strong> Track token consumption</li>
+                    <li><strong>Payment History:</strong> View transactions</li>
                     <li><strong>Payment Methods:</strong> Update cards & billing</li>
-                    <li><strong>Invoices:</strong> Download receipts</li>
-                    <li><strong>Account Settings:</strong> Manage preferences</li>
-                    <li><strong>Support:</strong> Get help when needed</li>
+                    <li><strong>Invoices:</strong> Download receipts from Stripe</li>
+                    <li><strong>Coming soon:</strong> Subscription management (discounts!)</li>
                 </ul>
                 <button class="plan-button secondary" onclick="openCustomerPortal()">
                     Manage Billing
