ui image changes, tenant properties fix, zoom dropdowns, ai assist

--- a/public/admin.html
+++ b/public/admin.html
@@ -67,6 +67,8 @@
           • <code>change_route_suffix_for_block</code> - Change the route suffix for the block (true/false)<br>
           • <code>post_text</code> - Custom text for the post button<br>
           • <code>post_button_color</code> - Custom color for the post button<br>
+          • <code>hide_ai_assist</code> - Hide the AI Assist button (true/false)<br>
+          • <code>hide_root_schema</code> - Hide root schema type input and labels (true/false)<br>
           • (more recolors or renames can be supported later if customers desire this.)
           <br>
           <strong>Format:</strong> One property per line as <code>key=value</code>
