backport this: historical fix for s3blockloader dupe

--- a/public/llm-tools.html
+++ b/public/llm-tools.html
@@ -124,7 +124,7 @@
             <a href="#" id="aiAssistLink" class="tool-card">
                 <div class="tool-icon">🤖</div>
                 <h3>AI Assist</h3>
-                <p>Transform your current JSON with custom AI instructions. Automatically fix validation issues, modify data structure, or apply complex transformations using natural language.</p>
+                <p>Transform your current JSON with custom AI instructions. Automatically fix validation issues, or apply complex transformations using natural language. Click AI Assist under the API Controls panel.</p>
             </a>
 
             <a href="#" id="schemaLink" class="tool-card">
