cors warnings, proxies and bypass instructions, company name

--- a/public/billing.html
+++ b/public/billing.html
@@ -920,5 +920,10 @@
             document.body.style.visibility = 'visible';
         });
     </script>
+    
+    <!-- Copyright Notice -->
+    <div style="position: fixed; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 999; color: #888; font-size: 10px; text-align: center;">
+        © 2025 Blockforger LLC, Wyoming
+    </div>
 </body>
 </html>
