--- a/public/llm-schema-generator.html
+++ b/public/llm-schema-generator.html
@@ -258,6 +258,11 @@
     <!-- API Configuration -->
     <script type="text/javascript" src="api-config.js"></script>
 
+
+    <!-- Copyright Notice -->
+    <div style="position: fixed; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 999; color: #888; font-size: 10px; text-align: center;">
+        © 2025 Blockforger LLC, Wyoming. All rights reserved.
+    </div>
     <script>
         let schemaCount = 1;
         
