--- a/public/llm-tools.html
+++ b/public/llm-tools.html
@@ -147,6 +147,11 @@
         </div>
     </div>
 
+    <!-- Copyright Notice -->
+    <div style="position: fixed; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 999; color: #888; font-size: 10px; text-align: center;">
+        © 2025 Blockforger LLC, Wyoming. All rights reserved.
+    </div>
+
     <script>
         // Get tenant parameter from URL
         const urlParams = new URLSearchParams(window.location.search);
