--- a/public/register.html
+++ b/public/register.html
@@ -483,6 +483,11 @@
         
         <div id="errorMessage" class="error-message" style="display: none;"></div>
         <div id="successMessage" class="success-message" style="display: none;"></div>
+        
+        <!-- Copyright Notice -->
+        <div style="text-align: center; margin-top: 20px; padding-top: 20px; border-top: 1px solid var(--border-color); color: #888; font-size: 12px;">
+            © 2025 Blockforger LLC, Wyoming. All rights reserved.
+        </div>
     </div>
 </body>
 </html>
