--- a/public/admin.html
+++ b/public/admin.html
@@ -310,6 +310,11 @@
       } 
     })();
   </script>
+  
+  <!-- Copyright Notice -->
+  <div style="position: fixed; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 999; color: #888; font-size: 10px; text-align: center;">
+    © 2025 Blockforger LLC, Wyoming. All rights reserved.
+  </div>
 </body>
 </html>
 
