--- a/public/llm-preload.html
+++ b/public/llm-preload.html
@@ -168,6 +168,11 @@
         </div>
     </div>
 
+        <!-- Copyright Notice -->
+        <div style="position: fixed; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 999; color: #888; font-size: 10px; text-align: center;">
+            © 2025 Blockforger LLC, Wyoming. All rights reserved.
+        </div>
+
     <!-- API Configuration -->
     <script type="text/javascript" src="api-config.js"></script>
 
