--- a/public/stripe.html
+++ b/public/stripe.html
@@ -160,6 +160,10 @@
         </div>
     </div>
 
+    <!-- Copyright Notice -->    <!-- Copyright Notice -->
+    <div style="position: fixed; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 999; color: #888; font-size: 10px; text-align: center;">
+        © 2025 Blockforger LLC, Wyoming. All rights reserved.
+    </div>
     <script>
         // Initialize tenant and handle redirects
         function initializeTenant() {
