--- a/public/admin.html
+++ b/public/admin.html
@@ -5,6 +5,17 @@
   <title>Admin Panel</title>
   <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17686657076"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17686657076');
+  </script>
+  
   <style>
     body { font-family: Segoe UI, Arial, sans-serif; margin: 0; padding: 20px; background: #1e1e1e; color: #fff; }
     .card { background:#2d2d30; border:1px solid #444; border-radius:8px; padding:16px; max-width:720px; margin:0 auto; }
