--- a/public/cors.html
+++ b/public/cors.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Chrome CORS Bypass Instructions - JSON Block Builder</title>
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17686657076"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17686657076');
+    </script>
+    
     <style>
         :root {
             --bg-color: #1e1e1e;
