--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>A Blockly-based visual editor for JSON structures.</title>
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17686657076"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17686657076');
+    </script>
+
     <!-- Modern Blockly imports -->
     <script type="text/javascript" src="https://unpkg.com/blockly@latest/blockly_compressed.js"></script>
     <script type="text/javascript" src="https://unpkg.com/blockly@latest/javascript_compressed.js"></script>
