--- a/public/register.html
+++ b/public/register.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>Register - Blockforger</title>
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17686657076"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17686657076');
+    </script>
+    
     <!-- Google OAuth Configuration -->
     <script type="text/javascript" src="oauth-config.js"></script>
     <script type="text/javascript" src="api-config.js"></script>
