--- a/public/test-oauth.html
+++ b/public/test-oauth.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Google OAuth Test</title>
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17686657076"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17686657076');
+    </script>
+    
     <script type="text/javascript" src="oauth-config.js"></script>
     <script type="text/javascript" src="google-oauth-auth.js"></script>
     <style>
