--- a/public/billing.html
+++ b/public/billing.html
@@ -526,7 +526,7 @@
                     <span class="token-count" id="tokenBalance">Loading...</span>
                     <span class="token-label">tokens</span>
                 </div>
-                <p class="token-description">Tokens are used for API calls and LLM schema generation</p>
+                <p class="token-description">Tokens are used for API calls and LLM schema generation. <strong>LLM call price: 500 tokens per request.</strong></p>
             </div>
         </div>
 
