refactor sitemap and clean up unused references

--- a/public/assist/preload.html
+++ b/public/assist/preload.html
@@ -185,7 +185,7 @@
         </div>
 
     <!-- API Configuration -->
-    <script type="text/javascript" src="api-config.js"></script>
+    <script type="text/javascript" src="../api-config.js"></script>
 
     <script>
         // Populate tenant textbox from URL parameter on page load
