--- a/public/user/test-oauth.html
+++ b/public/user/test-oauth.html
@@ -14,8 +14,8 @@
       gtag('config', 'AW-17686657076');
     </script>
     
-    <script type="text/javascript" src="oauth-config.js"></script>
-    <script type="text/javascript" src="google-oauth-auth.js"></script>
+    <script type="text/javascript" src="../oauth-config.js"></script>
+    <script type="text/javascript" src="../google-oauth-auth.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
