--- a/public/assist/schemagen.html
+++ b/public/assist/schemagen.html
@@ -267,7 +267,7 @@
     </div>
 
     <!-- API Configuration -->
-    <script type="text/javascript" src="api-config.js"></script>
+    <script type="text/javascript" src="../api-config.js"></script>
 
 
     <!-- Copyright Notice -->
