--- a/public/petstore.html
+++ b/public/petstore.html
@@ -296,7 +296,7 @@
             <h1>🐾 Petstore</h1>
             <div class="nav-links">
                 <a href="#" id="backButton" style="display: none;">← Back to List</a>
-                <a href="https://blockforger.zanzalaz.com/index.html?tenant=petstore">Back to Blockforger</a>
+                <a href="index.html?tenant=petstore">Back to Blockforger</a>
             </div>
         </div>
 
