--- a/public/user/register.html
+++ b/public/user/register.html
@@ -423,7 +423,7 @@
     </script>
 </head>
 <body>
-    <a href="/" class="back-link">← Back to Blockforger</a>
+    <a href="../index.html" class="back-link">← Back to Blockforger</a>
     
     <div class="register-container">
         <div class="logo">
