--- a/marketing/promo.html
+++ b/marketing/promo.html
@@ -33,12 +33,13 @@
             padding: 30px 20px;
         }
         .logo-container {
-            text-align: center;
+            text-align: left;
             margin: 20px 0;
         }
-        .logo-container svg {
-            max-width: 300px;
+        .logo-container img {
+            max-width: 600px;
             height: auto;
+            margin-left: 0;
         }
         .halloween-image {
             width: 100%;
@@ -105,105 +106,7 @@
         
         <div class="content">
             <div class="logo-container">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 256" role="img" aria-labelledby="title desc">
-                    <title id="title">BlockBuilder Logo</title>
-                    <desc id="desc">Two curly braces rotated on their side to form a horizontal block with a red hammer striking down on them.</desc>
-                    <g id="logo" transform="translate(256,128) scale(0.85) translate(-256,-128) translate(0,40)">
-                        <g id="braces" transform="translate(256,128) rotate(-90)">
-                            <text x="-45" y="0"
-                                id="braceTop"
-                                text-anchor="middle"
-                                dominant-baseline="middle"
-                                font-family="Georgia, 'Times New Roman', serif"
-                                font-weight="900"
-                                font-size="160"
-                                fill="#111">&#123;</text>
-                            <text x="45" y="0"
-                                id="braceBottom"
-                                text-anchor="middle"
-                                dominant-baseline="middle"
-                                font-family="Georgia, 'Times New Roman', serif"
-                                font-weight="900"
-                                font-size="160"
-                                fill="#111">&#125;
-                                <animate attributeName="x"
-                                    values="45;45;25;25;45"
-                                    keyTimes="0;0.375;0.5;0.583;1"
-                                    dur="1.2s"
-                                    repeatCount="indefinite" />
-                            </text>
-                        </g>
-                        <g id="hammer" transform="rotate(-10 383 81)">
-                            <rect x="361" y="-5" width="18" height="230" rx="9" ry="9" fill="#d32f2f"/>
-                            <rect x="305" y="-50" width="130" height="50" rx="10" ry="10" fill="#f44336"/>
-                            <rect x="308" y="-48" width="112" height="8" rx="4" ry="4" fill="#ffcdd2" opacity="0.7"/>
-                            <animateTransform attributeName="transform"
-                                type="rotate"
-                                values="-10 383 81; -60 383 81; -10 383 81"
-                                keyTimes="0; 0.6; 1"
-                                dur="1.2s"
-                                repeatCount="indefinite" />
-                        </g>
-                        <g id="sparks" opacity="0">
-                            <animate attributeName="opacity"
-                                values="0;0;1;0"
-                                keyTimes="0;0.5;0.65;1"
-                                dur="1.2s"
-                                repeatCount="indefinite" />
-                            <g stroke="#ff973d" stroke-width="6" stroke-linecap="round">
-                                <g transform="rotate(-5 236 72)">
-                                    <path d="M 230 72 L 241 72"/>
-                                </g>
-                                <animateTransform attributeName="transform"
-                                    type="translate"
-                                    values="0 0;0 0;-40 -6;-80 -12"
-                                    keyTimes="0;0.5;0.65;1"
-                                    dur="1.2s"
-                                    repeatCount="indefinite" />
-                            </g>
-                            <g stroke="#ff973d" stroke-width="6" stroke-linecap="round">
-                                <g transform="rotate(8 218 82)">
-                                    <path d="M 212 82 L 223 82"/>
-                                </g>
-                                <animateTransform attributeName="transform"
-                                    type="translate"
-                                    values="0 0;0 0;-40 -6;-80 -12"
-                                    keyTimes="0;0.5;0.65;1"
-                                    dur="1.2s"
-                                    repeatCount="indefinite" />
-                            </g>
-                            <g stroke="#ff973d" stroke-width="6" stroke-linecap="round">
-                                <g transform="rotate(-3 253 82)">
-                                    <path d="M 248 82 L 258 81"/>
-                                </g>
-                                <animateTransform attributeName="transform"
-                                    type="translate"
-                                    values="0 0;0 0;-40 -6;-80 -12"
-                                    keyTimes="0;0.5;0.65;1"
-                                    dur="1.2s"
-                                    repeatCount="indefinite" />
-                            </g>
-                            <g stroke="#ff973d" stroke-width="6" stroke-linecap="round">
-                                <path d="M 230 95 L 241 88.65"/>
-                                <animateTransform attributeName="transform"
-                                    type="translate"
-                                    values="0 0;0 0;-40 -6;-80 -12"
-                                    keyTimes="0;0.5;0.65;1"
-                                    dur="1.2s"
-                                    repeatCount="indefinite" />
-                            </g>
-                            <g stroke="#ff973d" stroke-width="6" stroke-linecap="round">
-                                <path d="M 238 68 L 249 74.65"/>
-                                <animateTransform attributeName="transform"
-                                    type="translate"
-                                    values="0 0;0 0;-40 -6;-80 -12"
-                                    keyTimes="0;0.5;0.65;1"
-                                    dur="1.2s"
-                                    repeatCount="indefinite" />
-                            </g>
-                        </g>
-                    </g>
-                </svg>
+                <img src="https://blockforger.zanzalaz.com/media/square.png" alt="Blockforger Logo" width="600" height="300" style="max-width: 600px; height: auto; display: block; margin: 0; margin-left: -40px;" />
             </div>
 
             <p class="message">
