Clean up meta buttons. Possibly broke my mail script too

--- a/marketing/promo.html
+++ b/marketing/promo.html
@@ -33,13 +33,13 @@
             padding: 30px 20px;
         }
         .logo-container {
-            text-align: left;
+            text-align: center;
             margin: 20px 0;
         }
         .logo-container img {
-            max-width: 600px;
+            max-width: 180px;
             height: auto;
-            margin-left: 0;
+            margin: 0 auto;
         }
         .halloween-image {
             width: 100%;
@@ -106,7 +106,7 @@
         
         <div class="content">
             <div class="logo-container">
-                <img src="https://blockforger.zanzalaz.com/media/square.png" alt="Blockforger Logo" width="600" height="300" style="max-width: 600px; height: auto; display: block; margin: 0; margin-left: -40px;" />
+                <img src="https://blockforger.zanzalaz.com/media/square.png" alt="Blockforger Logo" width="180" height="90" style="max-width: 180px; height: auto; display: block; margin: 0 auto;" />
             </div>
 
             <p class="message">
