--- a/public/user/success.html
+++ b/public/user/success.html
@@ -318,6 +318,7 @@
         <div class="warning-box" id="failedTenantsWarning" style="display: none;">
             <h4>⚠️ Some Tenant Names Were Not Available</h4>
             <p>The tenant names that failed to register are already taken by other users. You can try different names or use the default workspace to get started.</p>
+            <p>Contact us directly at blockforger@protonmail.com if you represent a <strong>trademark owner</strong> for one of these already-registered names.</p>
         </div>
         
         <div class="action-buttons">
